--- a/css/diceStyles.css
+++ b/css/diceStyles.css
@@ -44,6 +44,7 @@ h1, h2, h3 {
 	background-color: #efefef;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+	margin: 40px;
 }
 
 .card-deck > .card:hover {
@@ -58,5 +59,12 @@ h1, h2, h3 {
 
 a:hover{
 	font-size: 15pt;
+	color: #00f4ff;
+}
+
+.card{
+	margin: 40px;
+}
+#emailHelp{
 	color: #00f4ff;
 }
